--- a/css/resume.css
+++ b/css/resume.css
@@ -123,6 +123,7 @@ p.lead {
   }
   #sideNav .navbar-collapse .navbar-nav {
     flex-direction: column;
+    overflow: auto;
     width: 100%;
   }
   #sideNav .navbar-collapse .navbar-nav .nav-item {
